Upgrade to ASM 7.3
Closes gh-24438